// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChemicalFormula handles empty formula string 1`] = `
<Text
  allowFontScaling={false}
  style={
    {
      "color": "#FFF",
      "fontSize": 16,
      "fontWeight": "700",
    }
  }
/>
`;

exports[`ChemicalFormula matches snapshot 1`] = `
<Text
  allowFontScaling={false}
  style={
    {
      "color": "#FFF",
      "fontSize": 16,
      "fontWeight": "700",
    }
  }
>
  <Text
    allowFontScaling={false}
  >
    H
  </Text>
  <Text
    allowFontScaling={false}
    style={
      {
        "fontSize": 12,
        "lineHeight": 18,
        "textAlignVertical": "bottom",
      }
    }
  >
    2
  </Text>
  <Text
    allowFontScaling={false}
  >
    O
  </Text>
</Text>
`;
